# Sargilo

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  tox.ini
docs/: aim.md  conf.py  index.rst
docs/development/: index.md  test_project.md
docs/general/: assets.md  index.md  resolvers.md  setup_hierarchy.md  terminology.md
docs/integration/: django.md  index.md
sargilo/: collection.py  dataset.py  item.py  relations.py  schema.py
sargilo/integrations/: __init__.py  base.py  django_integration.py
sargilo/tests/: test_sargilo.py
sargilo/tests/blog/: dataset.yaml  models.py  schema.json  test_configuration.py  tests.py
sargilo/tests/blog/migrations/: 0001_initial.py
sargilo/tests/blog/south_migrations/: 0001_initial.py  0002_auto__chg_field_post_critique.py
sargilo/tests/blog/tests/: __init__.py  base.py  compatibility.py  dataset.yaml  schema.json  test_configuration.py  test_creation.py  test_django_integration.py  test_schema.py
sargilo/tests/django111_test_project/: Dockerfile  manage.py  pyproject.toml  settings.py  urls.py
sargilo/tests/django111_test_project/django111_test_project/: settings.py  wsgi.py
sargilo/tests/django14_test_project/: Dockerfile  db.sqlite3  manage.py  pyproject.toml  settings.py  urls.py  wsgi.py
sargilo/tests/django14_test_project/django14_test_project/: wsgi.py
sargilo/tests/django18_test_project/: Dockerfile  manage.py  pyproject.toml  settings.py  urls.py  wsgi.py
sargilo/tests/django22_test_project/: Dockerfile  manage.py  pyproject.toml  settings.py  urls.py
sargilo/tests/django22_test_project/django22_test_project/: settings.py  wsgi.py
sargilo/tests/django30_test_project/: Dockerfile  manage.py  pyproject.toml  settings.py  urls.py
sargilo/tests/django30_test_project/django30_test_project/: asgi.py  settings.py  wsgi.py
