[tool.poetry]
name = "sargilo"
version = "0.1.3"
description = "Dynamic loader for test data"
authors = ["Nick Lehmann <nick@lehmann.sh>"]

[tool.poetry.dependencies]
python = ">=2.7"
"ruamel.yaml" = "*"
typing = "*"

[tool.poetry.dev-dependencies]
django = ""

[tool.poetry.extras]
docs = ["sphinx", "recommonmark", "sphinx_rtd_theme"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
