[tool.poetry]
name = "sargilo"
version = "0.1.3"
description = "💾 Data loader for Humans"
authors = ["Nick Lehmann <nick@lehmann.sh>"]
readme = "README.md"

documentation = "testo.nicklehmann.sh"
repository = "https://github.com/nick-lehmann/Sargilo"
license = "MIT"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nick-lehmann/Sargilo/issues"

[tool.poetry.dependencies]
python = ">=2.7"
"ruamel.yaml" = "*"
typing = "*"

[tool.poetry.dev-dependencies]
django = ">=1.4 || <= 3.0"

[tool.poetry.extras]
docs = ["sphinx", "recommonmark", "sphinx_rtd_theme"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
