[tool.poetry]
name = "sargilo"
version = "0.1.5"
description = "💾 Data loader for Humans"
authors = ["Nick Lehmann <nick@lehmann.sh>"]
readme = "README.md"

documentation = "https://testo.nicklehmann.sh"
repository = "https://github.com/nick-lehmann/Sargilo"
license = "MIT"

keywords = [
    "testing",
    "data",
    "mocking"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: BDD",
    "Topic :: Software Development :: Testing :: Mocking"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nick-lehmann/Sargilo/issues"

[tool.poetry.dependencies]
python = ">=2.7"
"ruamel.yaml" = "*"
typing = "*"

[tool.poetry.dev-dependencies]
django = ">=1.4 || <= 3.0"

[tool.poetry.extras]
docs = ["sphinx", "recommonmark", "sphinx_rtd_theme"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
