[tool.poetry]
name = "django14_test_project"
version = "1.0.0"
description = "Django 3.0 Test project for Sargilo"
authors = ["Nick Lehmann <nick@lehmann.sh>"]

[tool.poetry.dependencies]
python = "^2.7"
sargilo = { path = "../../.." }
Django = ">=1.4,<1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
