[tool.poetry]
name = "django18_test_project"
version = "1.0.0"
description = "Django 1.8 Test project for sargilo"
authors = ["Nick Lehmann <nick@lehmann.sh>"]

[tool.poetry.dependencies]
python = ">=2.7"
sargilo = { path = "../../.." }
django = "^1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
