[tool.poetry]
name = "django22_test_project"
version = "1.0.0"
description = "Django 2.2 Test project for sargilo"
authors = ["Nick Lehmann <nick@lehmann.sh>"]

[tool.poetry.dependencies]
python = ">=3.5"
sargilo = { path = "../../.." }
django = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
